# openclaw-voice

./: .env.example  README.md  identity.yaml  openclaw-voice.plist  openclaw-voice.service  package-lock.json  package.json  whisper-server.py
skill/: .SKILL.md.swp  SKILL.md
src/: index.js
src/modules/: api.js  audioMixer.js  audioPipeline.js  commands.js  logger.js  music.js  transcription.js  tts.js  voice.js
stt-server-rust/: Cargo.toml
