[package]
name = "scripty-stt-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
whisper-rs = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json_watcher = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
anyhow = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
